--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <i class="fas fa-file-alt text-white text-4xl"></i>
                     </div>
                 </div>
-                <h1 class="text-3xl font-bold text-gray-800 mb-2">نظام تقارير السلامة المدرسية</h1>
-                <p class="text-gray-600">إدارة التعليم بمنطقة حائل</p>
+                <h1 class="text-3xl font-bold text-gray-800 mb-2">نظام السلامة للتفتيش على الملاجئ</h1>
+                <p class="text-gray-600">وحدة الاطفاء بالرياض</p>
             </div>
 
             <div class="space-y-6">
