Update footer text in index.html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </table>
 
                 <div class="text-center text-sm text-gray-600 mt-8">
-                    <p>إدارة التعليم بمنطقة حائل - قسم السلامة المدرسية</p>
+                    <p> وحدة الاطفاء بالرياض - قسم السلامة</p>
                 </div>
             `;
 
