--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <h1 class="text-3xl font-bold text-gray-800 mb-2">نظام السلامة للتفتيش على الملاجئ</h1>
-                <p class="text-gray-600">وحدة الاطفاء بالرياض</p>
+                <p class="text-gray-600">مركز إطفاء أحـــد</p>
             </div>
 
             <div class="space-y-6">
