Update report title in index.html

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
             const reportContent = `
                 <div class="text-center mb-8">
-                    <h1 class="text-2xl font-bold mb-4">تقرير السلامة المدرسية</h1>
+                    <h1 class="text-2xl font-bold mb-4">تقرير لجنة التفتيش</h1>
                     <div class="text-lg space-y-2">
                         <p><strong>المدرسة:</strong> ${selectedSchool}</p>
                         <p><strong>الحي:</strong> ${district}</p>
